# Epiktane

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: buttonModule.hpp  chatbox.hpp  defuser.hpp  gui.hpp  ktane.hpp  memory.hpp  module.hpp  morse.hpp  prototype.hpp  score.hpp  simon.hpp  timer.hpp  wire.hpp
src/: chatbox.cpp  defuser.cpp  ktane.cpp  main.cpp  parsing.cpp  score.cpp  timer.cpp
src/lib/: button.cpp  gui.cpp
src/module/: mButton.cpp  mMemory.cpp  mSimon.cpp  mWire.cpp  morse.cpp
